--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ h5{
 	font-weight: 800;
 }
 .output{
-	padding: 15px 20px;
+	padding: 12px 0px;                                                                                                                                 
 	border-radius: 5px;
 	margin-bottom: 20px;
+	text-align: right;
+	font-weight: bold;
 }
 
 .calculator-box{
